--- a/.github/workflows/common/action.yml
+++ b/.github/workflows/common/action.yml
@@ -16,4 +16,4 @@ runs:
 
         - name: Restore Nuget Packages
           shell: bash
-          run: dotnet restore
+          run: dotnet restore Core
