--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -34,3 +34,6 @@ jobs:
       - name: Run Unit Tests
         shell: bash
         run: dotnet test Core
+
+      - name: SonarCloud Common Steps
+        uses: ./.github/workflows/sonar-cloud
