--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
   - package-ecosystem: "nuget" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
+      interval: "weekly"
     assignees:
       - "hahhhayam"
     pull-request-branch-name:
@@ -18,3 +18,4 @@ updates:
     # Add reviewers
     reviewers:
       - "hahhhayam"
+      - "Sqvlen" 
