--- a/.github/workflows/common/action.yml
+++ b/.github/workflows/common/action.yml
@@ -16,4 +16,4 @@ runs:
 
       - name: Restore Nuget Packages
         shell: bash
-        run: dotnet restore --no-build ../jwt-research.sln
+        run: dotnet restore ../jwt-research.sln/
