--- a/.github/workflows/common/action.yml
+++ b/.github/workflows/common/action.yml
@@ -14,6 +14,9 @@ runs:
             path: ${{ env.NUGET_PACKAGES }}
             key: ${{ runner.os }}.nuget.${{ hashFiles('**/*.csproj') }}
 
+      - name: Locate
+        run: pwd
+
       - name: Restore Nuget Packages
         shell: bash
         run: dotnet restore
