--- a/.github/workflows/common/action.yml
+++ b/.github/workflows/common/action.yml
@@ -12,7 +12,7 @@ runs:
         uses: actions/cache@v3
         with:
             path: ${{ env.NUGET_PACKAGES }}
-            key: ${{ runner.os }}.nuget.${{ hashFiles('**/*.csproj') }}
+            key: ${{ runner.os }}.nuget.${{ hashFiles('**/**/*.csproj') }}
 
       - name: Locate dir
         shell: bash
